--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,11 @@
+html,body {
+    min-height: 100vh;  
+    height: 100vh;  
+}
+
 body{
     display: flex;
     justify-content: center;
-    min-height: 100vh;  
     max-height: -webkit-fill-available;
     background-color:  #3aafa9;
 }
