add todo and button hover

--- a/mystyle.css
+++ b/mystyle.css
@@ -80,6 +80,8 @@ p{
 #limit {
     display: flex;
     justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 #winlimit {
@@ -129,4 +131,12 @@ button {
 input {
     font-size: 16px;
     width: 30%;
+}
+
+button:hover:enabled {
+    filter: brightness(0.85);
+}
+
+button:active:enabled {
+    filter: brightness(0.95);
 }
